sequences/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
import syntaxtree.*;

        public class MiniJavaParser implements MiniJavaParserConstants {
                public static Position getPosition() {
                        return new Position(token.beginLine, token.beginColumn);
                }

/*END OF LEXER*/
/************************************
 * The MiniJava Grammar Starts Here *
 ************************************/
 /*START OF PARSER*/
  static final public Program Program() throws ParseException {
         MainClass m; ClassDeclList cl;
    m = MainClass();
    cl = ClassDeclList();
                                             {if (true) return new Program(m, cl);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
          Identifier i1, i2; Statement s;
    jj_consume_token(CLASS);
    i1 = Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    i2 = Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
                                                   {if (true) return new MainClass(i1, i2, s, getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDeclList ClassDeclList() throws ParseException {
          ClassDeclList cl = new ClassDeclList(); ClassDecl c;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
                            cl.addElement(c);
    }
                                                     {if (true) return cl;}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDecl() throws ParseException {
          ClassDecl cl;
    if (jj_2_1(3)) {
      cl = ClassDeclSimple();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        cl = ClassDeclExtends();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                                           {if (true) return cl;}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDeclSimple() throws ParseException {
          Identifier i; VarDeclList v = new VarDeclList(); MethodDeclList m = new MethodDeclList();
    jj_consume_token(CLASS);
    i = Identifier();
    jj_consume_token(LBRACE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case IDENTIFIER:
      v = VarDeclList();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PUBLIC:
      m = MethodDeclList();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
                                                                               {if (true) return new ClassDeclSimple(i, v, m, getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDeclExtends() throws ParseException {
          Identifier i1, i2; VarDeclList v = new VarDeclList(); MethodDeclList m = new MethodDeclList();
    jj_consume_token(CLASS);
    i1 = Identifier();
    jj_consume_token(EXTENDS);
    i2 = Identifier();
    jj_consume_token(LBRACE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case IDENTIFIER:
      v = VarDeclList();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PUBLIC:
      m = MethodDeclList();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
                                                                               {if (true) return new ClassDeclExtends(i1, i2, v, m, getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public ExpList ExpList() throws ParseException {
          ExpList el = new ExpList(); Exp e;
    e = Exp();
                    el.addElement(e);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      e = Exp();
                                                            el.addElement(e);
    }
                                                                                     {if (true) return el;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp() throws ParseException {
          Exp e;
    e = And();
                    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp And() throws ParseException {
          Exp e1=null,e2=null;
    e1 = LessThan();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      jj_consume_token(AND);
      e2 = LessThan();
                                                {if (true) return new And(e1, e2, getPosition());}
    }
                                                                                              {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp LessThan() throws ParseException {
          Exp e1=null,e2=null;
    e1 = AdditiveExp();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LT:
      jj_consume_token(LT);
      e2 = AdditiveExp();
                                                     {if (true) return new LessThan(e1, e2, getPosition());}
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
                                                                                                       {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp AdditiveExp() throws ParseException {
          boolean usePlus = true; Exp e1=null,e2=null;
    e1 = Times();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
                                usePlus = true;
        break;
      case MINUS:
        jj_consume_token(MINUS);
                                                            usePlus = false;
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = Times();
                              if (usePlus) {if (true) return new Plus(e1, e2, getPosition());} else {if (true) return new Minus(e1, e2, getPosition());}
    }
                                                                                                                                       {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Times() throws ParseException {
          Exp e1=null,e2=null;
    e1 = PrefixExp();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      jj_consume_token(STAR);
      e2 = PrefixExp();
                                                   {if (true) return new Times(e1, e2, getPosition());}
    }
                                                                                                   {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp PrefixExp() throws ParseException {
          Exp e1;
    if (jj_2_2(3)) {
      e1 = Not();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case FALSE:
      case NEW:
      case THIS:
      case TRUE:
      case SEQ:
      case INTEGER_LITERAL:
      case IDENTIFIER:
        e1 = PostfixExp();
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                                                      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Not() throws ParseException {
          Exp e1; boolean useNot = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
                   useNot=true;
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    e1 = PostfixExp();
                                                     if(useNot) {if (true) return new Not(e1, getPosition());} else {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp PostfixExp() throws ParseException {
          Exp e1, e2; Identifier i; ExpList el = new ExpList() ;
    e1 = PrimaryExp();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
      case DOT:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        jj_consume_token(LBRACKET);
        e2 = Exp();
        jj_consume_token(RBRACKET);
                                                          {if (true) return new ArrayLookup(e1, e2, getPosition());}
        break;
      default:
        jj_la1[16] = jj_gen;
        if (jj_2_3(2)) {
          jj_consume_token(DOT);
          i = Identifier();
          jj_consume_token(LPAREN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LPAREN:
          case NOT:
          case FALSE:
          case NEW:
          case THIS:
          case TRUE:
          case SEQ:
          case INTEGER_LITERAL:
          case IDENTIFIER:
            el = ExpList();
            break;
          default:
            jj_la1[15] = jj_gen;
            ;
          }
          jj_consume_token(RPAREN);
                                                                                          {if (true) return new Call(e1, i, el, getPosition());}
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DOT:
            jj_consume_token(DOT);
            jj_consume_token(LENGTH);
                                   {if (true) return new ArrayLength(e1, getPosition());}
            break;
          default:
            jj_la1[17] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
                                                                                     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

 //Exp Call() : {} {}  
 //Exp Minus() : {} { <MINUS> }
 //Exp Plus() : {} { <PLUS> } 
 /* Primary Expressions */
  static final public Exp PrimaryExp() throws ParseException {
          Exp e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      e = IntegerLiteral();
      break;
    case TRUE:
      e = True();
      break;
    case FALSE:
      e = False();
      break;
    case LPAREN:
      e = AssociativeExp();
      break;
    case IDENTIFIER:
      e = IdentifierExp();
      break;
    case THIS:
      e = This();
      break;
    default:
      jj_la1[18] = jj_gen;
      if (jj_2_4(2)) {
        e = NewArray();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          e = NewObject();
          break;
        case SEQ:
          e = SeqExp();
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
                                                                                       {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp IntegerLiteral() throws ParseException {
          Token t;
    t = jj_consume_token(INTEGER_LITERAL);
                                {if (true) return new IntegerLiteral(Integer.parseInt(t.image), getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public Exp True() throws ParseException {
    jj_consume_token(TRUE);
                   {if (true) return new True(getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public Exp False() throws ParseException {
    jj_consume_token(FALSE);
                    {if (true) return new False(getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public Exp AssociativeExp() throws ParseException {
          Exp e;
    jj_consume_token(LPAREN);
    e = Exp();
    jj_consume_token(RPAREN);
                                      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp IdentifierExp() throws ParseException {
          Identifier i;
    i = Identifier();
                           {if (true) return new IdentifierExp(i.s, getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public Exp This() throws ParseException {
    jj_consume_token(THIS);
                   {if (true) return new This(getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public Exp NewArray() throws ParseException {
          Exp e;
    jj_consume_token(NEW);
    jj_consume_token(INTEGER);
    jj_consume_token(LBRACKET);
    e = Exp();
    jj_consume_token(RBRACKET);
                                                          {if (true) return new NewArray(e, getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public Exp NewObject() throws ParseException {
          Identifier i;
    jj_consume_token(NEW);
    i = Identifier();
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
                                                   {if (true) return new NewObject(i, getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public Exp SeqExp() throws ParseException {
          Exp e1, e2;
    jj_consume_token(SEQ);
    jj_consume_token(LPAREN);
    e1 = Exp();
    jj_consume_token(COLON);
    e2 = Exp();
    jj_consume_token(RPAREN);
                                                              {if (true) return new SeqExp(e1, e2, getPosition());}
    throw new Error("Missing return statement in function");
  }

 //void ArrayLength() : {} {}
 //void ArrayLookup() : {} {}
  static final public Formal Formal() throws ParseException {
          Type t; Identifier i;
    t = Type();
    i = Identifier();
                                    {if (true) return new Formal(t, i, getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public FormalList FormalList() throws ParseException {
          FormalList fl = new FormalList(); Formal f;
    f = Formal();
                       fl.addElement(f);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMMA);
      f = Formal();
                                       fl.addElement(f);
    }
                                                                {if (true) return fl;}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDecl() throws ParseException {
          Type t; Identifier i; FormalList fl= new FormalList(); VarDeclList vl= new VarDeclList();
                 StatementList sl= new StatementList(); Exp e;
    jj_consume_token(PUBLIC);
    t = Type();
    i = Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case IDENTIFIER:
      fl = FormalList();
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    if (jj_2_5(2)) {
      vl = VarDeclList();
    } else {
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
    case IF:
    case WHILE:
    case PRINT:
    case IDENTIFIER:
      sl = StatementList();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    jj_consume_token(RETURN);
    e = Exp();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
                                                                             {if (true) return new MethodDecl(t, i, fl, vl, sl, e, getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDeclList MethodDeclList() throws ParseException {
          MethodDeclList ml = new MethodDeclList(); MethodDecl md;
    md = MethodDecl();
                           ml.addElement(md);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_8;
      }
      md = MethodDecl();
                                                                   ml.addElement(md);
    }
                                                                                            {if (true) return ml;}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDecl() throws ParseException {
          Type t; Identifier i;
    t = Type();
    i = Identifier();
    jj_consume_token(SEMICOLON);
                                                {if (true) return new VarDecl(t, i, getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public VarDeclList VarDeclList() throws ParseException {
          VarDeclList vl = new VarDeclList(); VarDecl v;
    v = VarDecl();
                        vl.addElement(v);
    label_9:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_9;
      }
      v = VarDecl();
                                                                         vl.addElement(v);
    }
                                                                                                  {if (true) return vl;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
          Statement s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      s = Block();
      break;
    case IF:
      s = If();
      break;
    case PRINT:
      s = Print();
      break;
    case WHILE:
      s = While();
      break;
    default:
      jj_la1[24] = jj_gen;
      if (jj_2_7(2)) {
        s = Assign();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          s = ArrayAssign();
          break;
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
                                                                                                     {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static final public StatementList StatementList() throws ParseException {
          StatementList sl = new StatementList(); Statement s;
    s = Statement();
                          sl.addElement(s);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_10;
      }
      s = Statement();
                                sl.addElement(s);
    }
                                                        {if (true) return sl;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Block() throws ParseException {
          StatementList sl=null;
    jj_consume_token(LBRACE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
    case IF:
    case WHILE:
    case PRINT:
    case IDENTIFIER:
      sl = StatementList();
      break;
    default:
      jj_la1[27] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
                                                   {if (true) return new Block(sl, getPosition());}
    throw new Error("Missing return statement in function");
  }

  static final public Statement If() throws ParseException {
          Exp e; Statement s1, s2;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    e = Exp();
    jj_consume_token(RPAREN);
    s1 = Statement();
    jj_consume_token(ELSE);
    s2 = Statement();
